# libvuknob

./: .gitignore  Makefile.am  NEWS  README.md  VERSION  configure  configure.ac  libvuknob.pc.in
src/: Makefile.am  android_java_interface.hh  async_operations.cc  common.hh  dynamic_machine.cc  dynamic_machine.hh  generic_platform_interface.cc  generic_platform_interface.hh  machine.cc  machine.hh  midi_generation.cc  midi_generation.hh  remote_interface.cc  remote_interface.hh  satan.cc  satan_debug.hh  satan_error.hh  satan_project_entry.cc  scales.cc  serialize.cc  serialize.hh  signal.cc  termination_handler.cc  vuknob_android_audio.cc  wavloader.cc  wavloader.hh
src/dynlib/: Android.mk  comprezza.c  comprezza.xml  dx7.c  dynlib_debug.h  europa4.c  europa4.xml  liboscillator.c  liveout.c  riff_wave_output.c  silverbox.c
src/engine_code/: abstract_knob.hh  base_machine.cc  base_machine.hh  client.cc  client.hh  controller_envelope.hh  global_control_object.cc  global_control_object.hh  handle_list.cc  pad.cc  scales_control.cc  scales_control.hh  sequence.cc  sequence.hh  server.cc  server.hh
src/ui_code/: connection_list.cc  controller_handler.cc  controller_handler.hh  fling_animation.hh  gnuvg_connection_list.cc  gnuvg_connection_list.hh  gnuvg_connector.cc  gnuvg_connector.hh  gnuvg_corner_button.cc  gnuvg_corner_button.hh  gnuvg_listview.cc  gnuvg_listview.hh  gnuvg_livepad.cc  gnuvg_livepad.hh  gnuvg_machine_creator.cc  gnuvg_machine_creator.hh  gnuvg_scaleeditor.cc  gnuvg_scaleeditor.hh  knob_instance.cc  knob_instance.hh  listview.cc  listview.hh  livepad2.cc  logo_screen.cc  logo_screen.hh  loop_settings.cc  loop_settings.hh  machine_selector_ui.cc  main_menu.cc  pattern_editor.cc  pncsequencer.cc  popup_menu.hh  popup_window.cc  scale_editor.cc  scale_slider.cc  scale_slider.hh  sequencer.cc  sequencer.hh  settings_screen.cc  simple_button.cc  (+7 more)
src/vuknob/: client.h  server.h
src_jar/com/holidaystudios/libvuknob/: Installation.java  JavaInterface.java  NsdHelper.java  SamsungAudio.java  VuknobAndroidAudio.java  WifiControl.java
src_jni/: Android.mk  Android.mk~  android_java_interface.cc  android_java_interface.hh  async_operations.cc  async_operations.hh  common.hh  controller_handler.cc  dynamic_machine.cc  linked_list.hh  livepad2.cc  livepad2.hh  load_ui.cc  machine.cc  machine.hh  machine_sequencer.cc  machine_sequencer.hh  midi_generation.cc  midi_generation.hh  musical_constants.hh  pathvariable_template.cc  project_info_entry.cc  remote_interface.cc  remote_interface.hh  satan.cc  satan_project_entry.cc  save_ui.cc  scales.cc  scales.hh  sequencer.cc  sequencer.hh  serialize.hh  timelines.cc  timelines.hh  whistle_ui.cc
src_jni/dynlib/: Android.mk~  chorus.c  comprezza.c  comprezza.testbench.c  dx7.c  dx7.xml  dynlib.h  europa4.c  libenvelope.c  libenvelope.h  libtestbench.c  riff_wave_output.h
src_jni/engine_code/: abstract_knob.hh  base_machine.cc  base_machine.hh  client.cc  client.hh  controller_envelope.cc  global_control_object.cc  global_control_object.hh  handle_list.hh  machine_api.cc  machine_api.hh  pad.cc  pad.hh  sequence.cc  sequence.hh  server.cc  server.hh
src_jni/ui_code/: connector.cc  connector.hh  controller_handler.cc  corner_button.cc  corner_button.hh  envelope_editor.cc  envelope_editor.hh  fling_animation.cc  gnuvg_connector.cc  gnuvg_connector.hh  gnuvg_corner_button.cc  gnuvg_listview.cc  gnuvg_livepad.cc  gnuvg_livepad.hh  gnuvg_scaleeditor.cc  gnuvg_scaleeditor.hh  knob_editor.cc  knob_editor.hh  knob_instance.cc  knob_instance.hh  livepad2.cc  livepad2.hh  logo_screen.cc  logo_screen.hh  loop_settings.cc  loop_settings.hh  machine_selector_ui.cc  main_menu.cc  main_menu.hh  pattern_editor.cc  pattern_editor.hh  pattern_editor_menu.hh  popup_menu.cc  popup_menu.hh  popup_window.cc  popup_window.hh  scale_editor.cc  scale_slide.cc  scale_slide.hh  sequencer.cc  (+13 more)
